appId: expo.modules.media3transformer.example
---
- launchApp:
    clearState: true
- assertVisible:
    text: "Media3 Transformer"
- tapOn:
    id: "videoUrlInput"
- inputText: "https://filesamples.com/samples/video/mp4/sample_640x360.mp4"
- tapOn:
    id: "transformOptions"
- inputText: '{}'
- tapOn:
    id: "transformButton"
- assertVisible:
    id: "transformStatus"
    text: "done"
- assertVisible:
    id: "transformerResult"
    text: '{"averageAudioBitrate":-2147483647,"averageVideoBitrate":342063,"durationMs":13313,"fileSizeBytes":572481,"videoFrameCount":400,"channelCount":-1,"sampleRate":-2147483647,"height":360,"width":640,"audioEncoderName":null,"videoEncoderName":null}'
